--- a/resources/theme/bolton/article.html
+++ b/resources/theme/bolton/article.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="css/bolton.css">
   <link rel="stylesheet" href="css/bolton-api.css">
   <link rel="stylesheet" href="css/bolton-highlight.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
   
 </head>
 
